tests/NormalTests/paczka1/small_fuzzy/38753084.err
Error in line 1: vn3 A268 75,3
Error in line 8: GSvLhLwR4 A268 29,2
Error in line 12: A268 S778 56,6
